examples/errors/dtos/Registration.tsb
import { Email } from "../types/Email.ts";
import { Username } from "../types/Username.ts";

// Deep validation in action: `Registration.tryNew(...)` chains through
// `Email.tryNew` and `Username.tryNew` for the marked fields. The
// returned `Err({ field, message })` surfaces the innermost failure —
// e.g. a malformed email yields `field: "value"` (from Email's
// constraint), not the outer field name. The caller can use the
// message verbatim or dispatch on `field`.

struct Registration {
  #[deep]
  email: Email,
  #[deep]
  username: Username,
}
